<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarAndTask"
            app:title="@string/new_Task"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/task_title_label"
        android:text="@string/task_title"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleInplay"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/enter_task_title"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/what_is_to_be_done"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="4dp"
      android:textSize="16sp"
      android:textColor="@color/colorAccent"
      />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginEnd="16dp"
        android:id="@+id/taskInpLay"
        android:layout_marginBottom="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_task"
            android:lines="3"
            android:gravity="start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp"
   />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/set_reminder_date_and_time"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_date"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:clickable="true"
            android:focusable="false"
            android:id="@+id/dateEdt"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorAccent"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/timeInptLay"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_time"
            android:clickable="true"
            android:id="@+id/timeEdt"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_access_time_black_24dp"
            android:drawableTint="@color/colorAccent"
            android:focusable="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:orientation="horizontal"
          android:layout_marginStart="16dp"
          android:layout_marginTop="8dp">
          <Spinner
              android:id="@+id/spinnerCategory"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_marginEnd="16dp"
              android:layout_height="wrap_content"/>
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_playlist_add_black_24dp"
              app:tint="@color/colorAccent"
              android:id="@+id/imgAddCategory"/>
      </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn"
        android:text="@string/save_task"
        android:layout_gravity="end"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="25dp"
        />


</LinearLayout>